Blocks now use all 6 sides, and a few measures have been put in place to avoid crashing when unexpected blocks are put in to the gui.